--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Henjun Memorials</title>
+    <title>Henjun</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="keywords" content="web,blog,google,search,analytics">
     <meta name="description" content="....">
 	<meta property="og:type" content="article">
-	<meta property="og:title" content="김현준의 기록">
+	<meta property="og:title" content="김현준의 블로그">
 	<meta property="og:url" content="https://henjun93.com">
 	<meta property="og:site_name" content="잡다한 정보와 지식들">
 	<meta property="og:description" content="....">
